[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bootloader = { version = "0.9.23", features = ["map_physical_memory"] }
itoa = "1.0.10"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
linked_list_allocator = "0.9.0"
pc-keyboard = "0.5.0"
pic8259 = "0.10.1"
spin = "0.9.8"
uart_16550 = "0.2.0"
volatile = "0.2.6"
x86_64 = "0.14.11"
